--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 
-<!-- Liquid desktop canvas -->
+<!-- NORMAL VIEWPORT (DESKTOP SAFE) -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>She Inspires</title>
@@ -14,31 +14,24 @@
 </head>
 
 <body>
- <nav class="top-nav">
-  <a href="#events">Explore Events</a>
+
+<nav class="top-nav">
+<a href="#events">Explore Events</a>
 </nav>
-
-
 
 <header class="header">
 <div class="logo-text">
-  <div class="brand-main">THATHAASTU</div>
-  <div class="brand-sub">INDIA</div>
+<div class="brand-main">THATHAASTU</div>
+<div class="brand-sub">INDIA</div>
 </div>
-
 </header>
 
 <section class="hero">
 <div class="hero-content">
-  <h1>On the occasion of Women’s Day</h1>
+<h1>On the occasion of Women’s Day</h1>
 <p> we proudly present</p>
 <p>a celebration honoring women’s strength and achievements.</p>
-
-
 <div class="year-overlay">2026</div>
-
-
-
 </div>
 </section>
 
@@ -66,10 +59,10 @@
 </section>
 
 <section class="about-section">
-
 <div class="about-box">
 
 <h2>Why We Are Organising This</h2>
+
 <p>
 On the occasion of Women’s Day, in association with <strong>I Don’t Blabber</strong>, we are organizing this celebration to bring women together,
 create opportunities, and encourage confidence, creativity, and community bonding.
@@ -80,11 +73,8 @@ This program is hosted to empower women through meaningful experiences, skill ac
 and shared moments of inspiration.
 </p>
 
-
 </div>
-
 </section>
-
 
 <section class="events-section" id="events">
 
@@ -93,60 +83,48 @@ and shared moments of inspiration.
 <div class="events-container">
 
 <a href="walkathon.html" class="event-card">
-<img src="https://media.istockphoto.com/id/186610138/photo/breast-cancer-rally.webp?a=1&b=1&s=612x612&w=0&k=20&c=qvTSyUfF6Cli9MVr-1i9hTPirHBtYNySJnOem3hy0F0=">
+<img src="https://media.istockphoto.com/id/186610138/photo/breast-cancer-rally.webp">
 <div class="event-content">
-  <span class="date-badge">21 Feb</span>
+<span class="date-badge">21 Feb</span>
 <h3>Women’s Day Walkathon</h3>
 <p>Walk together for health, equality, and community.</p>
 <span>Explore →</span>
 </div>
 </a>
 
-<!-- MARCH 6 -->
 <a href="march6.html" class="event-card">
 <img src="https://images.unsplash.com/photo-1521737604893-d14cc237f11d">
 <div class="event-content">
 <span class="date-badge">6 Mar</span>
 <h3>Creative Registrations</h3>
-<p>
-Job Fair • Art Exhibition • Food Stall<br>
-Photography & Videography Competition
-</p>
+<p>Job Fair • Art Exhibition • Food Stall<br>Photography & Videography Competition</p>
 <span>Explore →</span>
 </div>
 </a>
 
-<!-- MARCH 7 -->
 <a href="march7.html" class="event-card">
 <img src="https://images.unsplash.com/photo-1556910103-1c02745aae4d">
 <div class="event-content">
 <span class="date-badge">7 Mar</span>
 <h3>Skill Experience Day</h3>
-<p>
-Cooking Without Fire<br>
-Pottery Making
-</p>
+<p>Cooking Without Fire<br>Pottery Making</p>
 <span>Explore →</span>
 </div>
 </a>
 
-<!-- MARCH 8 -->
 <a href="march8.html" class="event-card">
-<img src="https://media.istockphoto.com/id/2194388443/photo/female-silhouette-filled-with-flowers-womens-day-concept.webp?a=1&b=1&s=612x612&w=0&k=20&c=7yRjv3paib7uI-slMqE73eSNeQEJW4ArN5Z0B7SJALg=">
+<img src="https://media.istockphoto.com/id/2194388443/photo/female-silhouette-filled-with-flowers-womens-day-concept.webp">
 <div class="event-content">
 <span class="date-badge">8 Mar</span>
 <h3>Women’s Day Main Events</h3>
-<p>
-Art • Job • Food Stalls<br>
-Fashion Walk • Rangoli Competition
-</p>
+<p>Art • Job • Food Stalls<br>Fashion Walk • Rangoli Competition</p>
 <span>Explore →</span>
 </div>
 </a>
 
 </div>
-
 </section>
+
 <section class="team-section">
 
 <h2 class="team-title">Meet Our Team</h2>
@@ -173,12 +151,11 @@ Fashion Walk • Rangoli Competition
 
 <div class="team-card">
 <h3>Shreya Shastri</h3>
-<span>Web Developer </span>
+<span>Web Developer</span>
 <p>Designed and developed the event website.</p>
 </div>
 
 </div>
-
 </section>
 
 <footer class="site-footer">
@@ -187,24 +164,17 @@ Fashion Walk • Rangoli Competition
 
 <h3>Women's Day 2026</h3>
 
-<p>
-A Women’s Day celebration dedicated to strength, creativity, and community.
-</p>
+<p>A Women’s Day celebration dedicated to strength, creativity, and community.</p>
 
-<p class="footer-contact">
-📞 +91 8892662603 &nbsp; 
-</p>
+<p class="footer-contact">📞 +91 8892662603</p>
 
-<p class="footer-copy">
-© 2026 • All Rights Reserved
-</p>
+<p class="footer-copy">© 2026 • All Rights Reserved</p>
 
 </div>
 
 </footer>
 
 <script src="script.js"></script>
-
 
 </body>
 </html>
