--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ and shared moments of inspiration.
 </a>
 
 <a href="march8.html" class="event-card">
-<img src="https://media.istockphoto.com/id/2194388443/photo/female-silhouette-filled-with-flowers-womens-day-concept.webp">
+<img src="https://media.istockphoto.com/id/2194388443/photo/female-silhouette-filled-with-flowers-womens-day-concept.webp?a=1&b=1&s=612x612&w=0&k=20&c=7yRjv3paib7uI-slMqE73eSNeQEJW4ArN5Z0B7SJALg=">
 <div class="event-content">
 <span class="date-badge">8 Mar</span>
 <h3>Women’s Day Main Events</h3>
