Update image source for walkathon event

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ and shared moments of inspiration.
 <div class="events-container">
 
 <a href="walkathon.html" class="event-card">
-<img src="https://media.istockphoto.com/id/186610138/photo/breast-cancer-rally.webp">
+<img src="https://media.istockphoto.com/id/186610138/photo/breast-cancer-rally.webp?a=1&b=1&s=612x612&w=0&k=20&c=qvTSyUfF6Cli9MVr-1i9hTPirHBtYNySJnOem3hy0F0="">
 <div class="event-content">
 <span class="date-badge">21 Feb</span>
 <h3>Women’s Day Walkathon</h3>
