--- a/index.html
+++ b/index.html
@@ -3,51 +3,527 @@
 <head>
 <meta charset="UTF-8">
 
-<!-- Liquid desktop canvas -->
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- Force desktop scale on mobile -->
+<meta name="viewport" content="width=1200">
 
 <title>She Inspires</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
 
+<style>
+
+*{
+margin:0;
+padding:0;
+box-sizing:border-box;
+font-family:Poppins,sans-serif;
+}
+
+body{
+overflow-x:hidden;
+background:linear-gradient(to bottom,#ff4b8b 0%,#ff6fa8 35%,#ff9fc3 65%,#ffd6e6 100%);
+}
+
+/* HEADER */
+
+.header{
+position:absolute;
+top:0;
+width:100%;
+z-index:10;
+}
+
+.logo-text{margin:40px}
+
+.brand-main{
+font-size:26px;
+font-weight:700;
+letter-spacing:3px;
+color:#ff2f7d;
+}
+
+.brand-sub{
+font-size:18px;
+letter-spacing:4px;
+color:#555;
+margin-left:100px;
+}
+
+/* NAV */
+
+.top-nav{
+position:absolute;
+top:35px;
+right:40px;
+z-index:9999;
+}
+
+.top-nav a{
+color:#ff2f7d;
+font-weight:600;
+padding:12px 28px;
+border-radius:40px;
+background:white;
+text-decoration:none;
+box-shadow:0 12px 30px rgba(233,30,99,.45);
+}
+
+/* HERO — FULL IMAGE (NO CROP) */
+
+.hero{
+background:
+linear-gradient(rgba(255,47,125,.25),rgba(255,47,125,.25)),
+url("https://images.indianexpress.com/2024/03/ie.com-thumbnails-3.jpg");
+
+background-repeat:no-repeat;
+background-position:center top;
+background-size:100% auto;     /* FULL IMAGE */
+
+aspect-ratio:16/9;
+
+display:flex;
+justify-content:center;
+align-items:center;
+text-align:center;
+color:white;
+position:relative;
+}
+
+.hero::after{
+content:"";
+position:absolute;
+left:0;
+bottom:0;
+width:100%;
+height:140px;
+background:linear-gradient(to bottom, rgba(255,255,255,0), #ff6fa8);
+pointer-events:none;
+}
+
+
+.hero-content h1{font-size:60px}
+.hero-content p{margin:15px 0;font-size:18px}
+
+.year-overlay{
+position:absolute;
+right:80px;
+bottom:125px;
+font-size:52px;
+color:#c2185b;
+}
+
+/* WOMAN IS */
+
+.scroll-section{min-height:120vh;
+animation:fadeUp .8s ease both;
+margin-top: -40px;}
+
+.sticky{
+position:sticky;
+top:0;
+height:100vh;
+display:flex;
+align-items:center;
+justify-content:center;
+}
+
+
+
+.title{font-size:42px;margin-bottom:20px}
+
+.cards{
+display:flex;
+flex-wrap:wrap;
+justify-content:center;
+gap:15px;
+}
+
+.card{
+width:180px;
+height:120px;
+border-radius:20px;
+display:flex;
+align-items:center;
+justify-content:center;
+font-weight:bold;
+color:white;
+text-shadow:0 2px 10px black;
+background-size:cover;
+background-position:center;
+box-shadow:0 20px 40px rgba(0,0,0,.2);
+opacity:0;
+transform:scale(.7);
+transition:.5s ease;
+}
+
+.card.show{
+opacity:1;
+transform:scale(1);
+}
+
+.leader{background-image:url("https://images.unsplash.com/photo-1521737604893-d14cc237f11d");}
+.mentor{background-image:url("https://images.unsplash.com/photo-1522202176988-66273c2fd55f");}
+.caregiver{background-image:url("https://images.unsplash.com/photo-1594824476967-48c8b964273f");}
+.homemaker{background-image:url("https://images.unsplash.com/photo-1581578731548-c64695cc6952");}
+.creator{background-image:url("https://images.unsplash.com/photo-1519389950473-47ba0277781c");}
+.mother{background-image:url("https://images.unsplash.com/photo-1529626455594-4ff0802cfb7e");}
+.visionary{background-image:url("https://images.unsplash.com/photo-1500530855697-b586d89ba3ee");}
+
+.manymore{
+margin-top:30px;
+font-size:40px;
+opacity:0;
+transition:.4s ease;
+}
+
+
+/* MOBILE GAP FIX */
+@media(max-width:600px){
+
+    .hero{
+    aspect-ratio:auto;
+    min-height:auto;
+  }
+
+    .hero::after{
+    height:60px;
+  }
+
+.scroll-section{
+  height:90vh;
+}
+
+.sticky{
+  position:relative;
+  height:auto;
+}
+
+}
+
+.events-section{
+padding:80px 20px;
+text-align:center;
+}
+
+.events-title{
+font-size:40px;
+margin-bottom:40px;
+}
+
+.events-container{
+display:flex;
+justify-content:center;
+gap:30px;
+}
+
+.event-card{
+width:100%;
+max-width:320px;
+border-radius:20px;
+overflow:hidden;
+text-decoration:none;
+color:#333;
+background:white;
+box-shadow:0 15px 40px rgba(0,0,0,.15);
+transition:.4s ease;
+}
+
+.event-card:hover{
+transform:translateY(-8px);
+}
+
+.event-card img{
+width:100%;
+height:200px;
+object-fit:cover;
+}
+
+.event-content{
+padding:20px;
+}
+
+.event-content h3{
+color:#ff2f7d;
+margin-bottom:10px;
+}
+
+.event-content p{
+color:#666;
+margin-bottom:15px;
+}
+
+.event-content span{
+font-weight:600;
+color:#ff2f7d;
+}
+
+@keyframes fadeUp{
+from{opacity:0;transform:translateY(20px);}
+to{opacity:1;transform:none;}
+}
+
+
+@media(max-width:768px){
+
+.hero-content h1{
+font-size:36px;
+}
+
+.cards{
+flex-direction:column;
+}
+
+.manymore{
+font-size:26px;
+}
+
+.events-container{
+flex-direction:column;
+align-items:center;
+}
+
+.logo img{
+height:120px;
+}
+
+}
+
+
+.top-nav{
+position:absolute;
+top:35px;
+right:40px;
+z-index:9999;
+}
+
+.top-nav a{
+display:flex;
+align-items:center;
+gap:8px;
+color:#ff2f7d;
+font-weight:600;
+text-decoration:none;
+padding:12px 28px;
+border-radius:40px;
+background:linear-gradient(135deg,white,white);
+box-shadow:0 12px 30px rgba(233,30,99,.45);
+cursor:pointer;
+transition:.3s ease;
+}
+
+.top-nav a:hover{
+transform:translateY(-3px);
+box-shadow:0 20px 40px rgba(233,30,99,.6);
+}
+
+
+.site-footer{
+background:#222;
+color:white;
+padding:50px 20px;
+text-align:center;
+}
+
+.footer-content{
+max-width:900px;
+margin:auto;
+}
+
+.site-footer h3{
+color:#ff2f7d;
+margin-bottom:10px;
+}
+
+.site-footer p{
+color:#ccc;
+line-height:1.6;
+margin:6px 0;
+}
+
+.footer-contact{
+margin-top:15px;
+font-weight:600;
+}
+
+.footer-copy{
+margin-top:20px;
+font-size:14px;
+opacity:.7;
+}
+
+
+.logo-text{
+  text-align: left;
+  margin-top: 10px;
+  font-family: 'Poppins', sans-serif;
+  padding-left: 40px;
+  margin: 40px;
+}
+
+.brand-main{
+  font-size: 26px;
+  font-weight: 700;
+  letter-spacing: 3px;
+  color: #ff2f7d;
+}
+
+.brand-sub{
+  font-size: 18px;
+  font-weight: 500;
+  letter-spacing: 4px;
+  margin-top: -4px;
+  color: #555;
+  margin-left: 100px;
+}
+
+
+.about-section{
+padding:100px 20px;
+display:flex;
+justify-content:center;
+}
+
+.about-box{
+max-width:800px;
+background:rgba(255,255,255,.25);
+backdrop-filter:blur(10px);
+padding:50px;
+border-radius:30px;
+text-align:center;
+box-shadow:0 20px 40px rgba(0,0,0,.2);
+border:1px solid rgba(255,255,255,.4);
+}
+
+.about-box h2{
+color:#c2185b;
+font-size:36px;
+margin-bottom:20px;
+}
+
+.about-box p{
+color:#444;
+line-height:1.8;
+font-size:16px;
+margin-bottom:12px;
+}
+
+/* liquid responsive */
+@media(max-width:768px){
+
+.about-box{
+padding:30px 20px;
+}
+
+.about-box h2{
+font-size:28px;
+}
+}
+
+
+.team-section{
+padding:100px 20px;
+text-align:center;
+}
+
+.team-title{
+font-size:40px;
+margin-bottom:50px;
+color:#c2185b;
+}
+
+.team-container{
+display:flex;
+flex-wrap:wrap;
+justify-content:center;
+gap:30px;
+max-width:1200px;
+margin:auto;
+}
+
+.team-card{
+width:260px;
+padding:28px 22px;
+border-radius:25px;
+background:rgba(255,255,255,.25);
+backdrop-filter:blur(10px);
+border:1px solid rgba(255,255,255,.4);
+box-shadow:0 20px 40px rgba(0,0,0,.2);
+transition:.4s ease;
+}
+
+.team-card:hover{
+transform:translateY(-10px);
+}
+
+.team-card h3{
+color:#ff2f7d;
+margin-bottom:6px;
+font-size:20px;
+}
+
+.team-card span{
+display:block;
+font-size:13px;
+letter-spacing:1px;
+color:#666;
+margin-bottom:12px;
+}
+
+.team-card p{
+font-size:14px;
+color:#444;
+line-height:1.6;
+}
+
+/* mobile liquid layout */
+@media(max-width:768px){
+
+.team-title{
+font-size:30px;
+}
+
+.team-card{
+width:90%;
+}
+}
+
+
+
+
+
+
+
+
+</style>
 </head>
 
 <body>
- <nav class="top-nav">
-  <a href="#events">Explore Events</a>
+
+<nav class="top-nav">
+<a href="#events">Explore Events</a>
 </nav>
-
-
 
 <header class="header">
 <div class="logo-text">
-  <div class="brand-main">THATHAASTU</div>
-  <div class="brand-sub">INDIA</div>
+<div class="brand-main">THATHAASTU</div>
+<div class="brand-sub">INDIA</div>
 </div>
-
 </header>
 
 <section class="hero">
 <div class="hero-content">
-  <h1>On the occasion of Women’s Day</h1>
-<p> we proudly present</p>
+<h1>On the occasion of Women’s Day</h1>
+<p>we proudly present</p>
 <p>a celebration honoring women’s strength and achievements.</p>
-
-
-<div class="year-overlay">2026</div>
-
-
-
 </div>
+<div class="year-overlay">2026</div>
 </section>
 
 <section class="scroll-section">
 <div class="sticky">
-<div class="content">
+<div style="text-align:center">
 
 <h1 class="title">A Woman Is</h1>
-<p style="color:#ff2f7d;font-size:24px;">❤</p>
 
 <div class="cards">
 <div class="card leader">Leader</div>
@@ -64,7 +540,6 @@
 </div>
 </div>
 </section>
-
 <section class="about-section">
 
 <div class="about-box">
@@ -203,8 +678,61 @@ A Women’s Day celebration dedicated to strength, creativity, and community.
 
 </footer>
 
-<script src="script.js"></script>
+<script>
 
+
+const section = document.querySelector('.scroll-section');
+const cards = [...document.querySelectorAll('.card')];
+const manymore = document.querySelector('.manymore');
+
+const center = Math.floor(cards.length / 2);
+
+// RESET ALL
+cards.forEach(card => {
+  card.style.opacity = 0;
+  card.style.transform = 'scale(.7)';
+});
+
+// Show center initially
+cards[center].style.opacity = 1;
+cards[center].style.transform = 'scale(1)';
+
+window.addEventListener('scroll', () => {
+
+  const start = section.offsetTop;
+  const end = start + section.offsetHeight - window.innerHeight;
+
+  let progress = (window.scrollY - start) / (end - start);
+  progress = Math.max(0, Math.min(1, progress));
+
+  let step = Math.floor(progress * (center + 1));
+
+  cards.forEach((card, i) => {
+
+    if (Math.abs(i - center) <= step) {
+      card.style.opacity = 1;
+      card.style.transform = 'scale(1)';
+    } else {
+      card.style.opacity = 0;
+      card.style.transform = 'scale(.7)';
+    }
+
+  });
+
+  if (step >= center) {
+    manymore.style.opacity = 1;
+    manymore.style.transform = 'scale(1)';
+  } else {
+    manymore.style.opacity = 0;
+    manymore.style.transform = 'scale(.9)';
+  }
+
+});
+
+
+
+
+</script>
 
 </body>
 </html>
